[feature] server: CRUD данных
