# internal/common/router/router.go
@@ -1,6 +1,11 @@
 package router
 
 const (
-	ApiLoginPath    = "/api/user/login"
-	ApiRegisterPath = "/api/user/register"
+	ApiLoginPath      = "/api/user/login"
+	ApiRegisterPath   = "/api/user/register"
+	ApiDataListPath   = "/api/data"
+	ApiDataCreatePath = "/api/data"
+	ApiDataReadPath   = "/api/data/:id"
+	ApiDataUpdatePath = "/api/data/:id"
+	ApiDataDeletePath = "/api/data/:id"
 )
